# Homework_Mr.Lee

./: README.md
components/adafruit_gfx/: Adafruit_GFX.cpp  CMakeLists.txt
components/matrix_panel/: CMakeLists.txt  ESP32-HUB75-MatrixPanel-I2S-DMA.h  ESP32-HUB75-MatrixPanel-leddrivers.cpp  ESP32-VirtualMatrixPanel-I2S-DMA.h  esp32s3-default-pins.hpp  gdma_lcd_parallel16.hpp
main/: CMakeLists.txt  ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  esp32_i2s_parallel_dma.cpp  esp32_i2s_parallel_dma.h  main.cpp
